--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -281,6 +281,13 @@ ul#nav li.current a { color: #F06000; }
    margin-top: 6px;
 }
 
+.hard-li {
+   float: left;
+   display: inline;
+   padding-left:10px;
+   padding-right: 10px;
+}
+
 /*----------------------------------------------*/
 /*	Skill Bars
 /*----------------------------------------------*/
